recitale: exposure: fix video not aligned on thumbnail
The video is actually slightly bigger and starts vertically a bit
lower than the thumbnail, leaving a few pixels from the thumbnail
above the video.

There's no reason for this so let's fix that by having the video match
the thumbnail.

--- a/recitale/themes/exposure/static/css/style-page.css
+++ b/recitale/themes/exposure/static/css/style-page.css
@@ -347,8 +347,6 @@ padding-bottom: 7em;
   left: 0;
   z-index: 0;
   width: 100%;
-  height: 105%;
-  margin-top: -2%;
 }
 
 .full-picture video {
